fix(toolbar): vertical icon alignment for multi-line labels

--- a/src/components/Toolbar/_mixins.scss
+++ b/src/components/Toolbar/_mixins.scss
@@ -206,7 +206,6 @@ $toolbar__panel__transition__timing-function: $timing-function;
 
   &__nav__item__title {
     &--icon {
-      padding-top: 1px;
       margin-left: $carbon--spacing-04;
     }
   }
